Fixes #17: Use flex basis for min-width to wrap

--- a/web/static/app/layout/_shows.sass
+++ b/web/static/app/layout/_shows.sass
@@ -1,12 +1,13 @@
 #shows
     display: flex
+    flex-direction: row
     flex-wrap: wrap
     justify-content: space-between
     padding: $padding-large 1rem
 
     & > article
         @media (min-width: $tablet)
-            max-width: 48%
+            flex: 0 0 48%
 
     @media (min-width: $desktop)
         padding: $padding-extra-large * 2 0
